Added arabic modifier to template

--- a/modules/naboj/templates/instructions-online.tex
+++ b/modules/naboj/templates/instructions-online.tex
@@ -4,5 +4,7 @@
     \pagestyle{instructions-online}
     \section{(* i18n.instructions_online.title *)}
     \setActive{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/_extras}%
+    \ifstrequal{(* language.id *)}{persian}{\arabicfont\setRL}{}
     \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/instructions-online-inner.tex}
+    \ifstrequal{(* language.id *)}{persian}{\unsetRL}{}
 (@ endblock @)
