--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -37,8 +37,8 @@
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\au}{au}
 \DeclareSIUnit{\byte}{B}
-\DeclareSIUnit{\celsius}{°C}
-\DeclareSIUnit{\fahrenheit}{°F}
+\DeclareSIUnit{\celsius}{\text{°}C}
+\DeclareSIUnit{\fahrenheit}{\text{°}F}
 \DeclareSIUnit{\parsec}{pc}
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\eur}{€}
