Changed picture numbering in seminar

--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -86,6 +86,7 @@
 }
 
 \numberwithin{equation}{subsection}
+\numberwithin{figure}{subsection}
 
 % Include overrides specific to this seminar instance from its static file (in the repository)
 \input{input/(* module.id *)/(* competition.id *)/.static/format-override.tex}
