Changed siunitx multi-part-units to brackets

--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -1,7 +1,7 @@
 \sisetup{
     detect-all                  = true,                         % keep formatting around
     separate-uncertainty        = true,                         % 7.2 ± 0.5
-    multi-part-units            = single,                       % 12.3 ± 0.2 kg, do not repeat "kg"
+    multi-part-units            = brackets,                     % 12.3 ± 0.2 kg, do not repeat "kg"
     per-mode                    = reciprocal,                   % `symbol` for "m/s", `reciprocal` for "ms^{-1}"
     group-separator             = {\,},
     group-minimum-digits        = 5,
