--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -37,6 +37,7 @@
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\au}{au}
 \DeclareSIUnit{\byte}{B}
+\DeclareSIUnit{\litre}{l}
 \DeclareSIUnit{\celsius}{\text{°}C}
 \DeclareSIUnit{\fahrenheit}{\text{°}F}
 \DeclareSIUnit{\parsec}{pc}
