Return of esvect

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -57,6 +57,7 @@
 \RequirePackage{boolexpr}                                   % boolean expressions, switch
 \RequirePackage[mathlf]{MinionPro}
 \RequirePackage[MnSymbol]{mathspec}                         % includes fontspec
+\RequirePackage[f]{esvect}
 \RequirePackage{accents}
 
 \newfontfamily\arabicfont[Script=Arabic]{Scheherazade}
