--- a/modules/scholar/templates/homework-students.tex
+++ b/modules/scholar/templates/homework-students.tex
@@ -5,7 +5,7 @@
         \subsection{(* problem.name *)(@ if 'bonus' in problem and problem.bonus @) (bonus)(@ endif @)}
         \label{sec:(* problem.id *)}
         \tryInput{\activeDirectory/(* problem.id *)/problem.tex}
-        (@ if issue.problems|length == 0 @)
+        (@ if problem.subproblems|length == 0 @)
             (@ block solution scoped @)(@ endblock solution @)
         (@ endif @)
         (@ if problem.subproblems @)
