Improved equation numbering in scholar

--- a/modules/scholar/templates/base.tex
+++ b/modules/scholar/templates/base.tex
@@ -25,6 +25,9 @@
     \titlespacing{\subparagraph}{0pt}{2mm}{0pt}
 }
 
+\numberwithin{equation}{subsection}
+\numberwithin{figure}{subsection}
+
 (@ block style @)(@ endblock @)
 
 \begin{document}
