--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -151,6 +151,9 @@
 \NewDocumentCommand{\Complex}{}{\mathbb{C}}
 
 \NewDocumentCommand{\Domain}{m}{\mathrm{dom}(#1)}
+\NewDocumentCommand{\Transpose}{m}{#1^{\mathsf{T}}}
+\NewDocumentCommand{\Det}{m}{\left|#1\right|}
+\NewDocumentCommand{\Inv}{m}{#1^{-1}}
 
 \NewDocumentCommand{\IntervalCC}{m m}{\left[#1; #2\right]}
 \NewDocumentCommand{\IntervalCO}{m m}{\left[#1; #2\right)}
