--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -2,6 +2,7 @@
     detect-all                  = true,                         % keep formatting around
     separate-uncertainty        = true,                         % 7.2 ± 0.5
     multi-part-units            = brackets,                     % 12.3 ± 0.2 kg, do not repeat "kg"
+    binary-units                = true,
     per-mode                    = reciprocal,                   % `symbol` for "m/s", `reciprocal` for "ms^{-1}"
     group-separator             = {\,},
     group-minimum-digits        = 5,
@@ -22,7 +23,7 @@
     text-micro                  = μ,
 }
 
-\RenewDocumentCommand{\Sun}{}{\text{\sun}}
+\NewDocumentCommand{\Sun}{}{\text{\sun}}
 \NewDocumentCommand{\Mercury}{}{\text{\mercury}}
 \NewDocumentCommand{\Venus}{}{\text{\venus}}
 \NewDocumentCommand{\Earth}{}{\text{\earth}}
