--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -151,7 +151,7 @@
 \NewDocumentCommand{\RealNonneg}{}{\mathbb{R}_{\geq 0}}
 \NewDocumentCommand{\Complex}{}{\mathbb{C}}
 
-%
+% Functions
 \NewDocumentCommand{\Domain}{m}{\mathrm{dom}(#1)}
 
 % Matrices
@@ -159,11 +159,24 @@
 \NewDocumentCommand{\Transpose}{m}{#1^{\mathsf{T}}}
 \NewDocumentCommand{\Inv}{m}{#1^{-1}}
 \NewDocumentCommand{\Det}{m}{\left|#1\right|}
+\NewDocumentCommand{\Eye}{}{\mathbb{I}}
 
+% Intervals
 \NewDocumentCommand{\IntervalCC}{m m}{\left[#1; #2\right]}
 \NewDocumentCommand{\IntervalCO}{m m}{\left[#1; #2\right)}
 \NewDocumentCommand{\IntervalOC}{m m}{\left(#1; #2\right]}
 \NewDocumentCommand{\IntervalOO}{m m}{\left(#1; #2\right)}
 
-\let\phi\varphi%
-\let\epsilon\varepsilon%
+\NewDocumentCommand{\kth}{m}{\ensuremath{#1^{\text{th}}}}
+
+% Fix weird font choices
+\let\tmp\phi
+\let\phi\varphi
+\let\varphi\tmp
+\let\tmp\epsilon
+\let\epsilon\varepsilon
+\let\varepsilon\tmp
+
+% Patch \left and \right with package mleftright
+\let\left\mleft
+\let\right\mright
