--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -23,7 +23,7 @@
     text-micro                  = μ,
 }
 
-\NewDocumentCommand{\Sun}{}{\text{\sun}}
+\RenewDocumentCommand{\Sun}{}{\text{\sun}}
 \NewDocumentCommand{\Mercury}{}{\text{\mercury}}
 \NewDocumentCommand{\Venus}{}{\text{\venus}}
 \NewDocumentCommand{\Earth}{}{\text{\earth}}
