--- a/modules/seminar/templates/invite.tex
+++ b/modules/seminar/templates/invite.tex
@@ -35,7 +35,8 @@
                         (* semester.camp.accomodation.location.nominative *) (@ if semester.camp.accomodation.URL @) \\(\URL{(* semester.camp.accomodation.URL *)})(@ endif @).
                     \item Cena sústredenia nepresiahne \textbf{\SI{(* semester.camp.accomodation.price *)}{\eur}} (v~cene je zarátaná strava, ubytovanie,
                         doprava z~\textbf{(* semester.camp.transport.gather.place.genitive *)} do \textbf{(* semester.camp.accomodation.location.genitive *)}
-                        a~späť do~\textbf{(* semester.camp.transport.disband.place.genitive *)}), platí sa vopred bankovým prevodom.
+                        a~späť do~\textbf{(* semester.camp.transport.disband.place.genitive *)}).
+                        Platí sa vopred bankovým prevodom, po potvrdení účasti Ti príde email od finančného oddelenia.
                     \item Stretneme sa \textbf{(* semester.camp.dates.begin.strftime('%d.~%m.~%Y') *)}
                         na železničnej stanici v~\textbf{(* semester.camp.transport.gather.place.locative *)},
                         odkiaľ spolu pôjdeme autobusom o~\textbf{(* semester.camp.transport.gather.time *)} do miesta konania sústredenia.
