--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -96,7 +96,7 @@
 \NewDocumentCommand{\EvalFromTo}{m m m}{\left.#1\right|_{#2}^{#3}}
 \NewDocumentCommand{\ExpectedChevrons}{m}{\left<#1\right>}
 \NewDocumentCommand{\ExpectedE}{m}{\mathbb{E}\left[#1\right]}
-\NewDocumentCommand{\MeanValue}{m}{\overline{#1}}
+\NewDocumentCommand{\Mean}{m}{\overline{#1}}
 
 %\NewDocumentCommand{\Int}{O{} O{} m m}{\int\limits_{#1}^{#2} \kern -0.2em #3\diff#4}
 \NewDocumentCommand{\Int}{O{} O{} m O{} m}{\int\limits_{#1}^{#2} \kern -0.2em #3#4\diff#5}
