--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -90,7 +90,7 @@
 
 \NewDocumentCommand{\ArrowVector}{m}{\vv{#1}}
 \NewDocumentCommand{\BoldVector}{m}{\mathbf{#1}}
-\NewDocumentCommand{\UnitVector}{m}{\vec{\hat{#1}}}
+\NewDocumentCommand{\UnitVector}{m}{\hat{\vec{#1}}}
 
 \NewDocumentCommand{\EvalAt}{m m}{\left.#1\right|_{#2}}
 \NewDocumentCommand{\EvalFromTo}{m m m}{\left.#1\right|_{#2}^{#3}}
